# extern_sync

./: .gitmodules  README.md  compute_error_metric.m  compute_overlaps.m  generate_sequences.m  rgb2lab.m
densePointTrajectories/: CMakeLists.txt
image_processing/FastBilateralFilter/: demo.m  maxFilter.m  readme.txt  shiftableBF.m  shiftable_jointBF.m
machine_learning/calinon_TrscSMC_2007_GMMGMR-v2.0/: EM_init_kmeans.m
metrics/mpi-chi2/: Makefile  README.txt  README_NP.txt  chi2_mex.c  chi2_mex.mexa64  chi2double  chi2double.c  chi2float
middlebury-flo-code/imageLib/: Error.h  Image.h  ImageIO.cpp
middlebury-flo-matlab/: flowToColor.m
optimization/maxflow--boykov_PAMI_2004_maxflow/: GCoptimization.cpp  energy.h  graph.cpp  graph.h  instances.inc  maxflow.cpp
segmentation/boundaries--arbelaez_globalPb/: globalPb_new_nofiles.m
segmentation/boundaries--dollar_ICCV_2013_structedges/: edgeBoxes.m  edgeBoxes2.m  edgeBoxesDemo2.m  edgeNms.m  edgesDetect.m  edgesSweeps.m
segmentation/boundaries--dollar_PAMI_2015_structedges/: bottles_ms1.mat  drawBox.m  edgeBoxesDemo2.m  getBestBB.m  readme.txt
segmentation/boundaries--leordeanu_ECCV_2012_gb/: genTexton.m  simpleGPb.m
segmentation/lee_ICCV_2011_keyvidobjseg/: keySegs_demo.m
segmentation/segments--arbelaez_CVPR_2014_mcg/: build.m  im2mcg.m  root_dir.m
segmentation/segments--bonev_ECCV_2014_candidateregions/: README.txt  license.txt
segmentation/segments--endres_ECCV_2010_objsegproposals/: endres_camvid_test.m  endres_voc_test.m  generate_only_segments.m  generate_proposals.m  proposals_startup.m
segmentation/segments--kim_CVPR_2011_bplr/: bplr_startup.m  demo.m
segmentation/segments--kim_ECCV_2012_shapesharing/: ComputeGPB.m  ComputeSegment.m  SetupPath.m  graphCutSegmentationWrapper.m  kim_voc_test.m  pruneProjections.m
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/: CMakeLists.txt  README.md
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/examples/: example.cpp  example_learned.cpp
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/contour/: CMakeLists.txt  spboundarydetector.cpp  spboundarydetector.h  spstructuredforest.cpp  spstructuredforest.h  structuredforest.cpp
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/imgproc/: image.cpp  image.h
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/learning/: forest.h  splitcriterion.cpp  tree.cpp
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/proposals/: CMakeLists.txt  edgeweight.cpp  proposal.cpp  seed.cpp  seed.h  seedfeature.cpp  seedfeature.h  unary.cpp  unary.h  unaryfeature.cpp  util.cpp
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/python/: CMakeLists.txt  contour.cpp  dataset.cpp  imgproc.cpp  proposals.cpp  segmentation.cpp  util.cpp  util.h
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/python/dataset/: CMakeLists.txt  berkeley.cpp  covering.cpp  covering.h  nyu.cpp  voc.cpp  weizmann.cpp
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/segmentation/: CMakeLists.txt  aggregation.h  graph.cpp  graph.h  segmentation.cpp  segmentation.h
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/lib/util/: CMakeLists.txt  algorithm.cpp  eigen.h  optimization.cpp  optimization.h  util.h  win_util.h
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/matlab/: CMakeLists.txt  OverSegmentation.m  example.m  gop_mex.cpp
segmentation/segments--krahenbuhl_ECCV_2014_geodesicobjprop/src/: __init__.py  eval_baseline.py  eval_bnd.py  eval_box.py  eval_coco.py  eval_learned.py  eval_seed.py  eval_size.py  example.py  gop.py  plot_box.py  train_mask.py  train_seed.py  util.py
segmentation/segments--lee_ICCV_2011_keyvidobjseg/: hypotheses_demo.m  keySegs_demo.m  keySegs_startup.m
segmentation/segments--levinshtein_PAMI_2009_turbopixels/: evolve_height_function_N.m  get_segments_from_superpixel_boundaries.m  get_speed_based_on_gradient_pb.m  make.m  superpixels_pb.m
segmentation/segments--ochs_ICCV_2011_vidobjseg/: conv_Track2Img  createSuperpixel.m  dens100  marple1_001.ppm  marple1_001_labels0000.ppm  marple1_001_seg0.ppm  marple1_001_seg1.ppm  marple1_001_seg2.ppm  readme.txt
segmentation/segments--ochs_PAMI_2014_seglongvid/: .gitignore  MoSegEvalAllPR  MoSegEvalPR  allShotsTestSet.txt  allShotsTrainingSet.txt  eval_test_all  eval_test_densify_all  eval_training_all  eval_training_densify_all  exec_densify_test_all  exec_densify_training_all  exec_test_all  exec_training_all  filestructureTestSet.cfg  filestructureTestSetDensify.cfg  filestructureTrainingSet.cfg  filestructureTrainingSetDensify.cfg  prepareDemoSequence.sh  prepareTestSequences.sh  prepareTrainingSequences.sh  readme.txt  readme_evaluation.txt
segmentation/segments--uijlings_IJCV_2013_selectivesearch/: Blob2Mask.m  Image2HierarchicalGrouping.m  demoPascal2007.m  demoah.m  genAllMasks.m  selective_search_segs.m
segmentation/segments--xu_CVPR_2012_libsvx/: .gitignore  LICENSE  README
segmentation/trajseg--brox_ECCV_2010_objsegpointtrajectories/: conv2ppm  motionsegBM  readWriteTracks.cpp  readme.txt
segmentation/trajseg--ochs_CVPR_2012_highordermotioncluster/: exec_ochsCVPR2012.py  libg2c.so.0  motionsegOB  readme.txt
toolbox_signal/: load_image.sci
toolboxes/middlebury-flo-code/imageLib/: CMakeLists.txt  Convert.h  Convolve.h  ImageIO.h  RefCntMem.h
vlfeat/: .gitignore
(+380 files in other folders)
