cmake_minimum_required(VERSION 2.8)

PROJECT(DensePointTracking)
# The version number.
SET( ${PROJECT_NAME}_VERSION_MAJOR 0 )
SET( ${PROJECT_NAME}_VERSION_MINOR 1 )

# print the version no.
MESSAGE(${PROJECT_NAME} " Version: " ${${PROJECT_NAME}_VERSION_MAJOR} "." ${${PROJECT_NAME}_VERSION_MINOR})

LINK_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR})
INCLUDE_DIRECTORIES(${${PROJECT_NAME}_SOURCE_DIR})

# set compilation
FILE(GLOB PROGRAM_SRCS NMath.cpp tracking.cpp)
ADD_EXECUTABLE(${PROJECT_NAME} ${PROGRAM_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ldof)
