cmake_minimum_required(VERSION 2.8)

PROJECT(Img)
# The version number.
SET( ${PROJECT_NAME}_VERSION_MAJOR 0 )
SET( ${PROJECT_NAME}_VERSION_MINOR 1 )

# print the version no.
MESSAGE(${PROJECT_NAME} " Version: " ${${PROJECT_NAME}_VERSION_MAJOR} "." ${${PROJECT_NAME}_VERSION_MINOR})

# find OpenCV
FIND_PACKAGE(PNG REQUIRED)

FILE(GLOB PROGRAM_SRCS *.cpp)
ADD_LIBRARY(${PROJECT_NAME} ${PROGRAM_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${PNG_LIBRARIES})

MESSAGE("-- Found libImg library")