find_package( Matio )
find_package( ZLIB )
set(DATASET_SRC "" )
set(DATASET_LIB "" )
if( MATIO_FOUND AND ZLIB_FOUND )
	set(DATASET_SRC dataset.cpp )
	set(DATASET_LIB dataset )
	add_subdirectory(dataset)
	add_definitions(-DUSE_DATASET)
endif()

include_directories( ${NUMPY_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} )

add_library( gop SHARED gop.cpp boost.cpp util.cpp map.cpp contour.cpp ${DATASET_SRC} imgproc.cpp learning.cpp segmentation.cpp proposals.cpp )
target_link_libraries( gop util ${Boost_LIBRARIES} ${PYTHON_LIBRARIES} boost_numpy ${DATASET_LIB} imgproc learning contour segmentation proposals )
set_target_properties( gop PROPERTIES PREFIX "")
if(APPLE)
	set_target_properties( gop PROPERTIES SUFFIX ".so" )
endif()
